# cvc

./: .gitignore  CMakeLists.txt  C_gamma_to_gamma.h  DML_crc32.c  DML_crc32.cpp  MM_analyse.cpp  Makefile  Makefile.2dim  Makefile.bgq  Makefile.example  Makefile.gcc.2dim.openmp  Makefile.qbig.n18  Makfile.gcc.serial.openmp  NJJN_3pt_analyse.cpp  NJJN_analyse.cpp  NJN_analyse.cpp  NN_analyse.cpp  Q_clover_phi.cpp  Q_clover_phi.h  Q_phi.c  Q_phi.cpp  Q_phi.h  README  TODO  aff_key_conversion.cpp  aff_key_conversion.h  ama_gsp.cpp  ama_gsp2.cpp  ama_gsp2_clover.cpp  ama_gsp_clover.cpp  ama_high.cpp  analyse_piq.c  analyse_piq_moresources.c  apply_Coo.cpp  apply_Coo_clover.cpp  apply_Dtm.c  apply_Dtm.cpp  apply_QSchur.cpp  apply_Qeo.cpp  apply_laplace.cpp  (+516 more)
Makefile_examples/: Makefile  Makefile.cuda  Makefile.daint.cuda  Makefile.daint.frontend  Makefile.daint.gcc.tmlqcd  Makefile.daint.intel  Makefile.daint.intel.tmlqcd  Makefile.laptop  Makefile.laptop.mpi  Makefile.stoutsmear  Makefile.with_tmLQCD
R/: .gitignore  R_gamma.R  R_source.R  check_fseq.R  convert.sh  get_sl.R  little_groups_2Oh.R  project.R  projector_set.R  rotations.R  set_cubic_group_double_cover_elements.R  set_cubic_group_double_cover_elements.h  set_cubic_group_elements_v2.R  set_cubic_group_elements_v2.h  set_rot_mat_table_cubic_group_double_cover_gu.R  test_irrep.R  test_projector.R
code_scripts/: dimensions.in  make_contractv123_inline.sh  make_del_contract_code.sh  make_del_contract_code_inline.sh  make_eps_contract_code.sh  make_eps_contract_code_inline.sh  make_fp_code.sh  make_fp_code_inline.sh  make_loop_contract_inline.sh  make_projection_code_inline.sh  make_rot_code_inline.sh  make_scm_code_inline.sh  make_sp_code.sh  make_sp_code_inline.sh  make_zm4x4_code.sh  perm.R  perm_tab4.in
contract/: contract_twopoint_gamma5_gamma_snk_only_snk_momentum.cpp  del_contract_13.h  del_contract_13_inline.h  del_contract_14.h  del_contract_14_inline.h  del_contract_23.h  del_contract_23_inline.h  del_contract_24.h  del_contract_24_inline.h  del_contract_34.h  del_contract_34_inline.h  eps_contract_12_inline.h  eps_contract_13.h  eps_contract_13_inline.h  eps_contract_14.h  eps_contract_14_inline.h  eps_contract_23.h  eps_contract_23_inline.h  eps_contract_24.h  eps_contract_24_inline.h  eps_contract_34_inline.h
contract2/: basic_functions.h
example_build_scripts/: do_cmake_tmLQCD_QUDA.sh
example_input_scripts/: projection_piN_input_all_momentum
html/: Q__clover__phi_8h_source.html  Q__phi_8h_source.html  annotated.html  classes.html  contractions__io_8h_source.html  cvc__complex_8h_source.html  cvc__geometry_8h_source.html  cvc__linalg_8h_source.html  cvc__utils_8h_source.html  default__input__values_8h_source.html  dml_8h_source.html  files.html  functions.html  functions_vars.html  gauge__io_8h_source.html  get__index_8h_source.html  getopt_8h_source.html  global_8h_source.html  gsp_8h_source.html  hyp__smear_8h_source.html  ifftw_8h_source.html  ilinalg_8h_source.html  index.html  invert__Qtm_8h_source.html  io_8h_source.html  io__utils_8h_source.html  laphs_8h_source.html  laphs__io_8h_source.html  laphs__utils_8h_source.html  laplace_8h_source.html  laplace__linalg_8h_source.html  mpi__init_8h_source.html  prepare__propagator_8h_source.html  propagator__io_8h_source.html  ranlxd_8h_source.html  ranlxs_8h_source.html  read__input__parser_8h_source.html  set__default_8h_source.html  structcvc_1_1DML__Checksum-members.html  structcvc_1_1DML__Checksum.html  (+40 more)
impl/: impl_contract_twopoint_xdep_gamma5_gamma_snk_only.hpp  impl_contract_twopoint_xdep_snk_gamma_only.hpp  impl_get_fwd_bwd_props_meta_from_npt_oet_meta.hpp  impl_get_fwd_bwd_seq_props_meta_from_npt_oet_meta.hpp  impl_get_seq_props_meta_from_npt_oet_meta.hpp
include/: Core.hpp  CorrelatorDependencies.hpp  DependencyFulfilling.hpp  DependencyGraph.hpp  MT19937_64.hpp  ParallelMT19937_64.hpp  SequenceOfUnique.hpp  Stopwatch.hpp  algorithms.hpp  debug_printf.hpp  enums.hpp  index_tools.hpp  init_g_gauge_field.hpp  loop_tools.h  meta_parsing.hpp  meta_types.hpp  yaml_enter_node.hpp  yaml_momentum_list.hpp  yaml_parsers.hpp  yaml_time_slice_propagator.hpp
init/: init_g_gauge_field.cpp
irrep_matrices/: README  convert.sh  set_rot_mat_table_cubic_group_single_cover_Oh_A1g_v2.cpp  set_rot_mat_table_cubic_group_single_cover_Oh_A1u_v2.cpp  set_rot_mat_table_cubic_group_single_cover_Oh_A2g_v2.cpp  set_rot_mat_table_cubic_group_single_cover_Oh_A2u_v2.cpp  set_rot_mat_table_cubic_group_single_cover_Oh_Eg_v2.cpp  set_rot_mat_table_cubic_group_single_cover_Oh_Eu_v2.cpp  set_rot_mat_table_cubic_group_single_cover_Oh_T1g_v2.cpp  set_rot_mat_table_cubic_group_single_cover_Oh_T1u_v2.cpp  set_rot_mat_table_cubic_group_single_cover_Oh_T2g_v2.cpp  set_rot_mat_table_cubic_group_single_cover_Oh_T2u_v2.cpp
latex/: annotated.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  structcvc_1_1DML__Checksum.tex  structcvc_1_1complex.tex  structcvc_1_1cvc_1_1DML__Checksum.tex  structcvc_1_1cvc_1_1complex.tex  structcvc_1_1cvc_1_1gsp__type.tex  structcvc_1_1cvc_1_1m__m__2pt__type.tex  structcvc_1_1cvc_1_1momentum__info__struct.tex  structcvc_1_1dble__vec__t.tex  structcvc_1_1eigensystem__type.tex  structcvc_1_1gsp__type.tex  structcvc_1_1m__m__2pt__type.tex  structcvc_1_1momentum__info__struct.tex  structcvc_1_1perambulator__type.tex  structcvc_1_1randomvector__type.tex  structcvc_1_1vec__t.tex  structoption.tex  structtmLQCD__lat__params.tex  structtmLQCD__mpi__params.tex  structyy__buffer__state.tex  structyy__trans__info.tex
tests/: CMakeLists.txt  analysis_test_ParallelMT19937_64.R  benchmark_cov_displ.cpp  benchmark_index_tools.cpp  boost_graph.cpp  cvc.input  invert.input  run.sh  test.h5  test_CHECK_EXITSTATUS.cpp  test_Core.cpp  test_MT19937_64.cpp  test_ParallelMT19937_64.cpp  test_SequenceOfUnique.cpp  test_h5_check_key_exists.cpp  test_index_tools.cpp  test_meta_types.cpp  test_parse_yaml.cpp  test_prepare_gamma_timeslice_oet.cpp  test_threept_oet_shifts.cpp
tests/gtest/: CMakeLists.txt  test_MT19937_64.cpp
(+33 files in other folders)
